--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 </head>
 <body>
 	<div class="container">
+		<div class="header">
+			<h1> Let's Play </h1>
+		</div>
 		<div id="buttons">
 			<button id="play-rock">Kamień</button>
 			<button id="play-paper">Papier</button>
 			<button id="play-scissors">Nożyczki</button>
 		</div>
-		<div id="messages"></div>
+		<div id="messages">
+		</div>
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
