--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		</div>
 		<div id="messages">
 		</div>
+		<div id="result">
+		</div>
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
