add_ne_result_and_finally_display

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<div id="messages">
 		</div>
 		<div id="result">
+			<p><strong> Tutaj wyświetlimy wynik rozgrywki </strong></p>
 		</div>
 	</div>
 	<script src="js/functions.js"></script>
