fix_alert_js_add_h2_html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<div class="container">
 		<div class="header">
 			<h1> Let's Play </h1>
+			<h2> with Jigsaw </h2>
 		</div>
 		<div id="buttons">
 			<button id="play-rock">Kamień</button>
